<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Vinyl Scrobbler</string>
    <string name="title_error">Error</string>
    <string name="error_invalid_data">Cannot comprehend data</string>
    <string name="querying_discogs">Querying Discogs…</string>
    <string name="error_discogs_io">Error querying Discogs.</string>
    <string name="error_lastfm">Last.fm error: %s</string>
    <string name="tab_artist_info">Artist</string>
    <string name="tab_artist_releases">Records</string>
    <string name="tab_master_info">Release</string>
    <string name="tab_master_versions">Versions</string>
    <string name="tab_release_info">Release</string>
    <string name="tab_tracks">Tracks</string>
    <string name="requires_zxing">This requires the ZXing Barcode Scanner app.</string>
    <string name="error_market">Error launching Android Market.</string>
    <string name="info_aliases">A.k.a.:</string>
    <string name="info_members">Members:</string>
    <string name="info_groups">Member of:</string>
    <string name="info_urls">URLs:</string>
    <string name="info_artist">By</string>
    <string name="info_genres">Genre:</string>
    <string name="info_styles">Style:</string>
    <string name="info_released">Released:</string>
    <string name="info_label">Label:</string>
    <string name="info_catno">Catalog number:</string>
    <string name="info_country">Country:</string>
    <string name="no_search_results">No results.</string>
    <string name="loggedin_as">Logged in as &lt;b&gt;%s&lt;/b&gt;</string>
    <string name="discogs_loggedin_as">Logged in as &lt;b&gt;%s&lt;/b&gt;</string>
    <string name="user_name">User name:</string>
    <string name="password">Password:</string>
    <string name="catchphrase">What\'s spinning?</string>
    <string name="main_collection">Browse your Collection</string>
    <string name="main_search">Search for record</string>
    <string name="main_barcode">Scan barcode</string>
    <string name="main_settings">Settings</string>
    <string name="search">Search</string>
    <string name="lastfm_login">Log in to Last.fm</string>
    <string name="discogs_login">Log in to Discogs</string>
    <string name="lastfm_logout">Log out</string>
    <string name="discogs_logout">Log out</string>
    <string name="lastfm">Last.fm</string>
    <string name="scrobble">Scrobble</string>
    <string name="scrobble_all">Scrobble all tracks</string>
    <plurals name="scrobble_selected">
    	<item quantity="one">Scrobble selected track</item>
    	<item quantity="other">Scrobble selected tracks</item>
    </plurals>
    <string name="scrobble_side">Scrobble side %s</string>
    <string name="scrobble_disc">Scrobble disc %s</string>
    <string name="scrobble_success">Tracks submitted.</string>
    <string name="search_hint">Search for record</string>
    <string name="show_master_release">View master release</string>
    <string name="install">Install</string>
    <string name="go_to_settings">Display Settings</string>
    <string name="firstrun_settings_info">Welcome to Vinyl Scrobbler. You can log in to your Last.fm and Discogs accounts in the settings screen.</string>
    <string name="login">Login</string>
    <string name="new_update">There is a new version of Vinyl Scrobbler available.</string>
    <string name="download_update">Download</string>
    <string name="ignore_update">Ignore</string>
    <string name="info_format">Format:</string>
    <string name="master_release">Master release</string>
    <string name="setting_no_recent_records">Number of records to remember</string>
    <string name="recent_releases">Recent</string>
    <string name="scrobble_past">Just finished listening</string>
    <string name="scrobble_future">About to play</string>
    <string name="now_scrobbling">Now scrobbling</string>
    <string name="album_by_artist">%1$s by %2$s</string>
    <string name="discogs">Discogs</string>
    <string name="discogs_nologin">Please log in to your Discogs account in the settings screen.</string>
    <string name="discogs_autoadd">Add scrobbled records to collection if missing</string>
    <string name="discogs_add_collection">Add to Discogs collection</string>
    <string name="discogs_add_success">Record added to Discogs</string>
    <string name="discogs_already_added">Record already in Discogs collection</string>
    <string name="discogs_store_collection">Cache your collection</string>
    <string name="collection_grid">Show album wall</string>
    <string name="collection_list">Show release list</string>
    <string name="need_discogs_login">For searching to work, you must login to a Discogs account. (Sorry!)</string>
</resources>
